--- a/package.json
+++ b/package.json
@@ -12,22 +12,23 @@
   },
   "scripts": {
     "install-all": "npm-run-posix-or-windows install-all:task",
-    "install-all:task": "yarn & yarn install-extension & yarn install-viewer & wait",
-    "install-all:task:windows": "yarn && yarn install-extension && yarn install-viewer",
-    "install-extension": "cd ./lighthouse-extension && yarn install",
+    "install-all:task": "yarn & yarn install-viewer & wait",
+    "install-all:task:windows": "yarn && yarn install-viewer",
     "install-viewer": "cd ./lighthouse-viewer && yarn install",
     "build-all": "npm-run-posix-or-windows build-all:task",
-    "build-all:task": "yarn build-extension & yarn build-viewer & wait",
-    "build-all:task:windows": "yarn build-extension && yarn build-viewer",
-    "build-extension": "cd ./lighthouse-extension && yarn build",
+    "build-all:task": "yarn build-extension & yarn build-devtools & yarn build-lr & yarn build-viewer & wait",
+    "build-all:task:windows": "yarn build-extension && yarn build-devtools && yarn build-lr && yarn build-viewer",
+    "build-extension": "node ./build/build-extension.js",
+    "build-devtools": "node ./build/build-bundle.js clients/devtools-entry.js dist/lighthouse-dt-bundle.js",
+    "build-lr": "node ./build/build-bundle.js clients/lightrider-entry.js dist/lighthouse-lr-bundle.js",
     "build-viewer": "cd ./lighthouse-viewer && yarn build",
-    "clean": "rimraf proto/scripts/*.json proto/scripts/*_pb2.* proto/scripts/*_pb.* proto/scripts/__pycache__ proto/scripts/*.pyc *.report.html *.report.dom.html *.report.json *.devtoolslog.json *.trace.json || true",
+    "clean": "rimraf dist proto/scripts/*.json proto/scripts/*_pb2.* proto/scripts/*_pb.* proto/scripts/__pycache__ proto/scripts/*.pyc *.report.html *.report.dom.html *.report.json *.devtoolslog.json *.trace.json || true",
     "lint": "[ \"$CI\" = true ] && eslint --quiet -f codeframe . || eslint .",
     "smoke": "node lighthouse-cli/test/smokehouse/run-smoke.js",
     "debug": "node --inspect-brk ./lighthouse-cli/index.js",
     "start": "node ./lighthouse-cli/index.js",
     "test": "yarn diff:sample-json && yarn lint --quiet && yarn unit && yarn type-check",
-    "test-extension": "cd lighthouse-extension && yarn test",
+    "test-clients": "mocha \"clients/test/**/*-test.js\"",
     "test-viewer": "cd lighthouse-viewer && yarn pptr-test",
     "test-lantern": "bash lighthouse-core/scripts/test-lantern.sh",
     "unit-core": "jest \"lighthouse-core/\"",
@@ -77,7 +78,6 @@
     "@types/configstore": "^2.1.1",
     "@types/cpy": "^5.1.0",
     "@types/css-font-loading-module": "^0.0.2",
-    "@types/del": "^3.0.1",
     "@types/esprima": "^4.0.2",
     "@types/inquirer": "^0.0.35",
     "@types/intl-messageformat": "^1.3.0",
@@ -106,7 +106,6 @@
     "cpy": "^7.0.1",
     "csv-validator": "^0.0.3",
     "cz-customizable": "^5.2.0",
-    "del": "^3.0.0",
     "devtools-protocol": "0.0.588129",
     "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
@@ -174,7 +173,7 @@
   },
   "bundlesize": [
     {
-      "path": "./lighthouse-extension/dist/scripts/lighthouse-ext-bundle.js",
+      "path": "./dist/extension/scripts/lighthouse-ext-bundle.js",
       "threshold": "520 Kb"
     },
     {
@@ -191,7 +190,7 @@
     "exclude": [
       "**/third_party/**",
       "**/test/",
-      "lighthouse-extension/"
+      "clients/"
     ]
   },
   "homepage": "https://github.com/GoogleChrome/lighthouse#readme",
