--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lighthouse",
-  "version": "3.2.1",
+  "version": "4.0.0-alpha.2-3.2.1",
   "description": "Lighthouse",
   "main": "./lighthouse-core/index.js",
   "bin": {
