--- a/package.json
+++ b/package.json
@@ -137,7 +137,7 @@
     "zone.js": "^0.7.3"
   },
   "dependencies": {
-    "axe-core": "3.0.0-beta.2",
+    "axe-core": "3.1.2",
     "chrome-launcher": "^0.10.5",
     "configstore": "^3.1.1",
     "cssstyle": "1.1.1",
