--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build-extension": "node ./build/build-extension.js",
     "build-devtools": "node ./build/build-bundle.js clients/devtools-entry.js dist/lighthouse-dt-bundle.js",
     "build-lr": "node ./build/build-bundle.js clients/lightrider-entry.js dist/lighthouse-lr-bundle.js",
+    "build-lr-smokehouse": "browserify --bare clients/lightrider-smokehouse-collate.js -o dist/lightrider-smokehouse-collate.js",
     "build-viewer": "node ./build/build-viewer.js",
     "clean": "rimraf dist proto/scripts/*.json proto/scripts/*_pb2.* proto/scripts/*_pb.* proto/scripts/__pycache__ proto/scripts/*.pyc *.report.html *.report.dom.html *.report.json *.devtoolslog.json *.trace.json || true",
     "lint": "[ \"$CI\" = true ] && eslint --quiet -f codeframe . || eslint .",
@@ -87,6 +88,7 @@
     "@types/make-dir": "^1.0.3",
     "@types/node": "*",
     "@types/opn": "^3.0.28",
+    "@types/puppeteer": "^1.12.1",
     "@types/raven": "^2.5.1",
     "@types/semver": "^5.5.0",
     "@types/uglify-es": "^3.0.0",
