--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build-extension": "node ./build/build-extension.js",
     "build-devtools": "node ./build/build-bundle.js clients/devtools-entry.js dist/lighthouse-dt-bundle.js",
     "build-lr": "node ./build/build-bundle.js clients/lightrider-entry.js dist/lighthouse-lr-bundle.js",
-    "build-lr-smokehouse": "browserify --bare -i debug -i marky clients/lightrider-smokehouse-report.js -o dist/lightrider-smokehouse-report.js",
+    "build-lr-smokehouse-report": "browserify --bare -i debug -i marky clients/lightrider-smokehouse-report.js -o dist/lightrider-smokehouse-report.js",
     "build-lr-smokehouse-data": "node build/build-lr-smokehouse-data.js",
     "build-viewer": "node ./build/build-viewer.js",
     "clean": "rimraf dist proto/scripts/*.json proto/scripts/*_pb2.* proto/scripts/*_pb.* proto/scripts/__pycache__ proto/scripts/*.pyc *.report.html *.report.dom.html *.report.json *.devtoolslog.json *.trace.json || true",
