--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@types/jest": "^24.0.9",
     "@types/jpeg-js": "^0.3.0",
     "@types/lodash.isequal": "^4.5.2",
+    "@types/lodash.set": "^4.3.6",
     "@types/make-dir": "^1.0.3",
     "@types/node": "*",
     "@types/opn": "^3.0.28",
@@ -117,6 +118,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jest": "^24.3.0",
     "jsdom": "^12.2.0",
+    "lodash.set": "^4.3.2",
     "make-dir": "^1.3.0",
     "npm-run-posix-or-windows": "^2.0.2",
     "nyc": "^13.3.0",
