--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,14 @@ sudo: required
 language: node_js
 branches:
   only:
-  - master
+  - v4
 matrix:
   include:
     - node_js: "8"
     - node_js: "10"
-      if: head_branch IS blank AND branch = master
+      if: head_branch IS blank AND branch = v4
     - node_js: "11"
-      if: head_branch IS blank AND branch = master
+      if: head_branch IS blank AND branch = v4
 dist: trusty
 cache:
   yarn: true
@@ -28,6 +28,8 @@ before_script:
   # see comment above about puppeteer
   - export CHROME_PATH="$(which google-chrome-stable)"
   - sh -e /etc/init.d/xvfb start
+  # Print out the Chrome version so we know what we're working with
+  - google-chrome-stable --version
   - yarn build-all
 script:
   - yarn bundlesize
