--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "prettier": "^1.14.3",
     "pretty-json-stringify": "^0.0.2",
     "puppeteer": "^1.10.0",
+    "source-map": "^0.7.3",
     "typescript": "3.2.2",
     "uglify-es": "3.0.15",
     "url-search-params": "0.6.1",
