--- a/package.json
+++ b/package.json
@@ -11,58 +11,58 @@
     "node": ">=10.13"
   },
   "scripts": {
-    "build-all": "npm-run-posix-or-windows build-all:task",
-    "build-all:task": "yarn build-extension & yarn build-devtools & yarn build-lr & yarn build-viewer & wait",
     "build-all:task:windows": "yarn build-extension && yarn build-devtools && yarn build-lr && yarn build-viewer",
-    "build-extension": "node ./build/build-extension.js",
+    "build-all:task": "yarn build-extension & yarn build-devtools & yarn build-lr & yarn build-viewer & wait",
+    "build-all": "npm-run-posix-or-windows build-all:task",
     "build-devtools": "node ./build/build-bundle.js clients/devtools-entry.js dist/lighthouse-dt-bundle.js && node ./build/build-dt-report-resources.js",
+    "build-extension": "node ./build/build-extension.js",
     "build-lr": "node ./build/build-lightrider-bundles.js",
     "build-viewer": "node ./build/build-viewer.js",
-    "clean": "rimraf dist proto/scripts/*.json proto/scripts/*_pb2.* proto/scripts/*_pb.* proto/scripts/__pycache__ proto/scripts/*.pyc *.report.html *.report.dom.html *.report.json *.devtoolslog.json *.trace.json lighthouse-core/lib/i18n/locales/*.ctc.json || true",
-    "lint": "[ \"$CI\" = true ] && eslint --quiet -f codeframe . || eslint .",
-    "smoke": "node lighthouse-cli/test/smokehouse/run-smoke.js",
-    "debug": "node --inspect-brk ./lighthouse-cli/index.js",
-    "start": "node ./lighthouse-cli/index.js",
-    "test": "yarn diff:sample-json && yarn lint --quiet && yarn unit && yarn type-check",
-    "test-clients": "jest \"clients/\"",
-    "test-viewer": "yarn unit-viewer && jest lighthouse-viewer/test/viewer-test-pptr.js",
-    "test-lantern": "bash lighthouse-core/scripts/test-lantern.sh",
-    "unit-core": "jest \"lighthouse-core/\"",
-    "unit-cli": "jest \"lighthouse-cli/\"",
-    "unit-viewer": "jest \"lighthouse-viewer/.*-test.js\"",
-    "unit": "yarn unit-core && yarn unit-cli && yarn unit-viewer",
-    "unit:ci": "npm run unit-core -- --runInBand --ci --coverage && npm run unit-cli -- --runInBand --ci --coverage && npm run unit-viewer -- --runInBand --ci --coverage",
-    "core-unit": "yarn unit-core",
-    "cli-unit": "yarn unit-cli",
-    "viewer-unit": "yarn unit-viewer",
-    "watch": "yarn unit-core --watch",
-    "unit:cicoverage": "nyc --all --hook-run-in-context npm run unit:ci && nyc report --reporter text-lcov > unit-coverage.lcov",
-    "coverage": "yarn unit:cicoverage && nyc report --reporter html",
-    "smoke:cicoverage": "nyc npm run smoke && nyc report --reporter text-lcov > smoke-coverage.lcov",
-    "coverage:smoke": "yarn smoke:cicoverage && nyc report --reporter html",
-    "coveralls": "cat unit-coverage.lcov | coveralls",
-    "codecov": "codecov -f unit-coverage.lcov -F unit && codecov -f smoke-coverage.lcov -F smoke",
-    "devtools": "bash lighthouse-core/scripts/roll-to-devtools.sh",
-    "compile-devtools": "bash lighthouse-core/scripts/compile-against-devtools.sh",
-    "chrome": "node lighthouse-core/scripts/manual-chrome-launcher.js",
-    "fast": "yarn start --emulated-form-factor=none --throttlingMethod=provided",
-    "deploy-viewer": "yarn build-viewer --deploy",
-    "now-build": "node lighthouse-core/scripts/build-report-for-autodeployment.js",
     "bundlesize": "bundlesize",
-    "timing-trace": "node lighthouse-core/scripts/generate-timing-trace.js",
     "changelog": "conventional-changelog --config ./build/changelog-generator/index.js --infile changelog.md --same-file",
-    "type-check": "tsc -p . && tsc -p lighthouse-viewer/",
+    "chrome": "node lighthouse-core/scripts/manual-chrome-launcher.js",
+    "clean": "rimraf dist proto/scripts/*.json proto/scripts/*_pb2.* proto/scripts/*_pb.* proto/scripts/__pycache__ proto/scripts/*.pyc *.report.html *.report.dom.html *.report.json *.devtoolslog.json *.trace.json lighthouse-core/lib/i18n/locales/*.ctc.json || true",
+    "cli-unit": "yarn unit-cli",
+    "codecov": "codecov -f unit-coverage.lcov -F unit && codecov -f smoke-coverage.lcov -F smoke",
+    "compile-devtools": "bash lighthouse-core/scripts/compile-against-devtools.sh",
+    "compile-proto": "protoc --python_out=./ ./proto/lighthouse-result.proto && mv ./proto/*_pb2.py ./proto/scripts || (echo \"❌ Install protobuf ≥ 3.7.1 to compile the proto file.\" && false)",
+    "core-unit": "yarn unit-core",
+    "coverage:smoke": "yarn smoke:cicoverage && nyc report --reporter html",
+    "coverage": "yarn unit:cicoverage && nyc report --reporter html",
+    "coveralls": "cat unit-coverage.lcov | coveralls",
+    "debug": "node --inspect-brk ./lighthouse-cli/index.js",
+    "deploy-viewer": "yarn build-viewer --deploy",
+    "devtools": "bash lighthouse-core/scripts/roll-to-devtools.sh",
+    "diff:sample-json": "yarn i18n:checks && bash lighthouse-core/scripts/assert-golden-lhr-unchanged.sh",
+    "fast": "yarn start --emulated-form-factor=none --throttlingMethod=provided",
     "i18n:checks": "./lighthouse-core/scripts/i18n/assert-strings-collected.sh",
     "i18n:collect-strings": "node lighthouse-core/scripts/i18n/collect-strings.js",
+    "lint": "[ \"$CI\" = true ] && eslint --quiet -f codeframe . || eslint .",
+    "minify-latest-run": "./lighthouse-core/scripts/lantern/minify-trace.js ./latest-run/defaultPass.trace.json ./latest-run/defaultPass.trace.min.json && ./lighthouse-core/scripts/lantern/minify-devtoolslog.js ./latest-run/defaultPass.devtoolslog.json ./latest-run/defaultPass.devtoolslog.min.json",
+    "mixed-content": "./lighthouse-cli/index.js --chrome-flags='--headless' --preset=mixed-content",
+    "now-build": "node lighthouse-core/scripts/build-report-for-autodeployment.js",
+    "smoke:cicoverage": "nyc npm run smoke && nyc report --reporter text-lcov > smoke-coverage.lcov",
+    "smoke": "node lighthouse-cli/test/smokehouse/run-smoke.js",
+    "start": "node ./lighthouse-cli/index.js",
+    "static-server": "node lighthouse-cli/test/fixtures/static-server.js",
+    "test-clients": "jest \"clients/\"",
+    "test-lantern": "bash lighthouse-core/scripts/test-lantern.sh",
+    "test-viewer": "yarn unit-viewer && jest lighthouse-viewer/test/viewer-test-pptr.js",
+    "test": "yarn diff:sample-json && yarn lint --quiet && yarn unit && yarn type-check",
+    "timing-trace": "node lighthouse-core/scripts/generate-timing-trace.js",
+    "type-check": "tsc -p . && tsc -p lighthouse-viewer/",
+    "ultradumb-benchmark": "./lighthouse-core/scripts/benchmark.js",
+    "unit-cli": "jest \"lighthouse-cli/\"",
+    "unit-core": "jest \"lighthouse-core/\"",
+    "unit-viewer": "jest \"lighthouse-viewer/.*-test.js\"",
+    "unit:ci": "npm run unit-core -- --runInBand --ci --coverage && npm run unit-cli -- --runInBand --ci --coverage && npm run unit-viewer -- --runInBand --ci --coverage",
+    "unit:cicoverage": "nyc --all --hook-run-in-context npm run unit:ci && nyc report --reporter text-lcov > unit-coverage.lcov",
+    "unit": "yarn unit-core && yarn unit-cli && yarn unit-viewer",
+    "update:proto-roundtrip": "cd proto/scripts && PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=cpp PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION_VERSION=2 python json_roundtrip_via_proto.py",
     "update:sample-artifacts": "node lighthouse-core/scripts/update-report-fixtures.js",
     "update:sample-json": "yarn i18n:collect-strings && node ./lighthouse-cli -A=./lighthouse-core/test/results/artifacts --config-path=./lighthouse-core/test/results/sample-config.js --output=json --output-path=./lighthouse-core/test/results/sample_v2.json && node lighthouse-core/scripts/cleanup-LHR-for-diff.js ./lighthouse-core/test/results/sample_v2.json --only-remove-timing && yarn compile-proto && yarn build-proto-roundtrip",
-    "diff:sample-json": "yarn i18n:checks && bash lighthouse-core/scripts/assert-golden-lhr-unchanged.sh",
-    "ultradumbBenchmark": "./lighthouse-core/scripts/benchmark.js",
-    "mixed-content": "./lighthouse-cli/index.js --chrome-flags='--headless' --preset=mixed-content",
-    "minify-latest-run": "./lighthouse-core/scripts/lantern/minify-trace.js ./latest-run/defaultPass.trace.json ./latest-run/defaultPass.trace.min.json && ./lighthouse-core/scripts/lantern/minify-devtoolslog.js ./latest-run/defaultPass.devtoolslog.json ./latest-run/defaultPass.devtoolslog.min.json",
-    "compile-proto": "protoc --python_out=./ ./proto/lighthouse-result.proto && mv ./proto/*_pb2.py ./proto/scripts || (echo \"❌ Install protobuf ≥ 3.7.1 to compile the proto file.\" && false)",
-    "build-proto-roundtrip": "cd proto/scripts && PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=cpp PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION_VERSION=2 python json_roundtrip_via_proto.py",
-    "static-server": "node lighthouse-cli/test/fixtures/static-server.js"
+    "viewer-unit": "yarn unit-viewer",
+    "watch": "yarn unit-core --watch"
   },
   "devDependencies": {
     "@firebase/app-types": "0.3.1",
