--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ lcov.info
 lighthouse-cli/results
 results.html
 last-run-results.html
+smoke-test-dfns-compiled.json
 
 *.trace.json
 *.devtoolslog.json
