--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ lcov.info
 lighthouse-cli/results
 results.html
 last-run-results.html
-smoke-test-dfns-compiled.json
+smoke-test-dfns-compiled.js
 
 *.trace.json
 *.devtoolslog.json
