--- a/package.json
+++ b/package.json
@@ -79,7 +79,6 @@
     "@types/gh-pages": "^2.0.0",
     "@types/google.analytics": "0.0.39",
     "@types/inquirer": "^0.0.35",
-    "@types/intl-messageformat": "^1.3.0",
     "@types/jest": "^24.0.9",
     "@types/jpeg-js": "^0.3.0",
     "@types/lodash.isequal": "^4.5.2",
@@ -140,8 +139,8 @@
     "http-link-header": "^0.8.0",
     "inquirer": "^3.3.0",
     "intl": "^1.2.5",
-    "intl-messageformat": "^2.2.0",
-    "intl-messageformat-parser": "^1.4.0",
+    "intl-messageformat": "^4.4.0",
+    "intl-pluralrules": "^1.0.3",
     "jpeg-js": "0.1.2",
     "js-library-detector": "^5.4.0",
     "jsonld": "^1.5.0",
