--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "browserify": "^16.2.3",
     "bundlesize": "^0.17.2",
     "chalk": "^2.4.1",
+    "cldr-core": "^35.1.0",
     "codecov": "^3.2.0",
     "conventional-changelog-cli": "^1.3.4",
     "coveralls": "^3.0.3",
