--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@types/cpy": "^5.1.0",
     "@types/css-font-loading-module": "^0.0.2",
     "@types/eslint": "^4.16.6",
+    "@types/exorcist": "^0.4.5",
     "@types/gh-pages": "^2.0.0",
     "@types/google.analytics": "0.0.39",
     "@types/inquirer": "^0.0.35",
@@ -96,6 +97,7 @@
     "angular": "^1.7.4",
     "archiver": "^3.0.0",
     "babel-core": "^6.26.0",
+    "babel-plugin-add-header-comment": "^1.0.3",
     "babel-plugin-syntax-async-generators": "^6.13.0",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "brfs": "^2.0.2",
@@ -112,6 +114,7 @@
     "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-local-rules": "0.1.0",
+    "exorcist": "^1.0.1",
     "gh-pages": "^2.0.1",
     "glob": "^7.1.3",
     "idb-keyval": "2.2.0",
@@ -125,6 +128,7 @@
     "prettier": "^1.14.3",
     "pretty-json-stringify": "^0.0.2",
     "puppeteer": "^1.19.0",
+    "sourcemap-validator": "^1.1.1",
     "terser": "^4.2.0",
     "typescript": "3.5.3",
     "zone.js": "^0.7.3"
