tests: ensure we always have latest chrome stable

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,11 @@ cache:
     - lantern-data
     - /home/travis/.rvm/gems/
 install:
+  # Ensure we have the latest Chrome stable.
+  - sudo apt-get update
+  - sudo apt-get install dpkg
+  - sudo apt-get install --only-upgrade google-chrome-stable
+  - google-chrome-stable --version
   # if our e2e tests fail in the future it might be that we are not compatible
   # with the latest puppeteer api so we probably need to run on chromimum
   # @see https://github.com/GoogleChrome/lighthouse/pull/4640/files#r171425004
