--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -5,9 +5,9 @@
 # bazel run --config=remote --remote_instance_name=projects/google.com:lighthouse-bazel/instances/default_instance :lighthouse -- --help
 # hit a snag: https://github.com/bazelbuild/rules_nodejs/issues/1190
 
-load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
+load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary", "nodejs_test")
 
-# Use self managed node_modules, becuase listing out each dependency needed is a chore.
+# Use self managed node_modules, because listing each dependency is a chore.
 # Note, this makes RCE slower.
 # see https://github.com/bazelbuild/rules_nodejs/blob/7e3e6be38e1cf3c6c99d8dc8829377a2beacbb53/docs/install.md#dependencies
 filegroup(
@@ -33,12 +33,18 @@ filegroup(
   srcs = [
     "//:lighthouse-cli",
     "//:lighthouse-core",
+  ],
+  testonly = True,
+  data = [
+    '@org_chromium_chromium//file',
+    '@io_bazel_rules_webtesting//browsers:chromium-local',
   ]
 )
 
-nodejs_binary(
+nodejs_test(
   name = "lighthouse",
   entry_point = "//:lighthouse-cli",
+  testonly = True,
   data = [
     ":cli",
     # "@npm//yargs",
@@ -52,7 +58,7 @@ nodejs_binary(
   node_modules = ":node_modules"
 )
 
-nodejs_binary(
+nodejs_test(
   name = "smoke",
   entry_point = "//:lighthouse-cli/test/smokehouse/run-smoke.js",
   data = [
@@ -62,3 +68,9 @@ nodejs_binary(
   ],
   node_modules = ":node_modules"
 )
+
+# sh_test(
+#   name = "smoke_test",
+#   srcs = [":smoke"],
+#   args = ["$(location :smoke)"],
+# )
